syntax = "proto3";
package idaproto;
option go_package = "../pbs";
import "common.proto";

message backend_operate {
  req_head head = 1; //公共头部
  int32 type = 2; //操作类型
  string data = 3; //操作数据
}

message backend_operate_ack {
  ack_head head = 1; //公共头部
  int32 type = 2; //操作类型
  string data = 3; //操作数据
}

message cluster_operate {
  string publisher = 1; //发布者
  int32 type = 2; //操作类型
  string data = 3; //操作数据
}