syntax = "proto3";
package idaproto;
option go_package = "../pbs";
import "common.proto";

message notify_head {
  int32 uid = 1; //唯一码
  string code = 2; //错误码
  string message = 3; //错误消息
}

// 用户登录请求
message login_req {
  req_head head = 1;
  string username = 2; //账号
  string password = 3; //密码
  string phone = 4; //手机号
  string pkg = 5; //渠道包
  int32 project_id = 6; //项目id
  string currency = 7; //货币
}

//用户登录回复
message login_ack {
  ack_head head = 1; //公共头部
  int32 uid = 2; //用户唯一id
  string username = 3; //账号
  string token = 4; //token信息
  int64 amount = 5; //余额
  repeated game_info game_list = 6; //大厅列表
  string currency = 7; //货币
}

//游戏信息
message game_info {
  int32 id = 1; //游戏id
  string name = 2; //游戏名称
  string icon = 3; //游戏图标
  string url = 4; //游戏地址
  int32 status = 5; //游戏状态 1开启 2关闭
  string config = 6; //游戏配置
}

message into_game {
  req_head head = 1;
  int32 game_id = 2; //游戏id
  int32 play_type = 3; //玩法类型
}

// 用户登出请求
message logout_req {
  req_head head = 1;
}

//用户登出回复
message logout_ack {
  ack_head head = 1; //公共头部
}

// 商户用户登录请求
message merchant_login_req {
  req_head head = 1;
}

// 商户用户登录回复
message merchant_login_ack {
  ack_head head = 1; //公共头部
  int32 uid = 2; //用户唯一id
  string username = 3; //账号
  string token = 4; //token信息
  int64 amount = 5; //余额
  repeated game_info game_list = 6; //大厅列表
  string currency = 7; //货币
}
