syntax = "proto3";
package idaproto;
option go_package = "../pbs";
import "common.proto";

//牌
message tag {
  int32 tag_id = 1; // 标签id
  int32 x = 2; //x坐标
  int32 y = 3; //y坐标
  float multiple = 4; // 标签的倍数
  bool is_wild = 5; // 是否百搭
}

//牌列表
message tags{
  repeated tag tags = 1; //牌id列表
  int64 amount = 2; //倍数
}

//步骤流程
message step_flow {
  int64 index = 1; //索引
  int64 gain = 2; //总赢取
  repeated tags remove_list = 3; //移除的牌列表
  tags add_list = 4; //新增的牌
}

//游戏步骤
message match_spin_step {
  int32 type = 1; //类型 0:普通 1:免费
  int32 id = 2; //id
  int32 pid = 3; //pid
  int64 sum_gain = 4; //总赢取
  repeated tags init_list =5; //初始排布
  repeated step_flow flows = 6; //游戏流程
}

//下注回复
message match_spin_ack{
  ack_head head = 1; //头
  spin_opt opt = 2; //下注配置
  int64 total_win = 3; //总赢取
  int64 total_bet = 4; //总下注
  int64 total_raise = 5; //总加注
  repeated match_spin_step steps = 6; //下注回复
  int32 txn_id = 7; //交易id
  int64 before_amount = 8; //before余额
  int64 after_amount = 9; //after余额
}


